--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ build:
   script:
     - cargo build --target wasm32-unknown-unknown --verbose
     - wasm-bindgen --target web target/wasm32-unknown-unknown/debug/*.wasm --out-dir build/
+    - cp --recursive cubicle/res/* build/
+    - cd build/ && zip -r -FS ../cubicle.xpi -- *
   artifacts:
     paths:
-      - build/
+      - cubicle.xpi
