--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -8,5 +8,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 js-sys = "0.3.61"
+serde = "1.0.158"
+serde-wasm-bindgen = "0.5.0"
 web-sys = { version = "0.3.61", features = ["console"] }
 wasm-bindgen = "0.2.84"
