--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -7,8 +7,24 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+async-std = "1.12.0"
+console_error_panic_hook = "0.1.7"
+idna = "0.3.0"
 js-sys = "0.3.61"
 serde = "1.0.158"
 serde-wasm-bindgen = "0.5.0"
-web-sys = { version = "0.3.61", features = ["console"] }
+thiserror = "1.0.40"
 wasm-bindgen = "0.2.84"
+wasm-bindgen-futures = "0.4.34"
+
+[dependencies.web-sys]
+version = "0.3.61"
+features = [
+  "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window",
+  "console",
+  "ReadableStream",
+  "ReadableStreamByobReader",
+  "ReadableStreamDefaultReader",
+  "ReadableStreamGetReaderOptions",
+  "ReadableStreamReaderMode",
+]
