Added contextual identity creation and methods

--- a/cubicle/res/manifest.json
+++ b/cubicle/res/manifest.json
@@ -4,6 +4,10 @@
 	"description": "A flexible container manager.",
 	"author": "WylieYYYY",
 	"manifest_version": 2,
+	"permissions": [
+		"contextualIdentities",
+		"cookies"
+	],
 	"background": {
 		"page": "background.html",
 		"persistent": false
