--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -11,8 +11,10 @@ async-std = "1.12.0"
 console_error_panic_hook = "0.1.7"
 idna = "0.3.0"
 js-sys = "0.3.61"
-serde = "1.0.158"
+serde = { version = "1.0.158", features = ["derive"] }
 serde-wasm-bindgen = "0.5.0"
+strum = "0.24.1"
+strum_macros = "0.24.1"
 thiserror = "1.0.40"
 wasm-bindgen = "0.2.84"
 wasm-bindgen-futures = "0.4.34"
