--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0.158", features = ["derive"] }
 serde-wasm-bindgen = "0.5.0"
 strum = "0.24.1"
 strum_macros = "0.24.1"
+tera = { version = "1.18.1", default-features = false }
 thiserror = "1.0.40"
 wasm-bindgen = "0.2.84"
 wasm-bindgen-futures = "0.4.34"
