--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -31,3 +31,7 @@ features = [
   "ReadableStreamGetReaderOptions",
   "ReadableStreamReaderMode",
 ]
+
+[build-dependencies]
+fs_extra = "1.3.0"
+tera = { version = "1.18.1", default-features = false }
