--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -11,7 +11,7 @@ async-std = "1.12.0"
 console_error_panic_hook = "0.1.7"
 idna = "0.3.0"
 js-sys = "0.3.61"
-serde = { version = "1.0.158", features = ["derive"] }
+serde = { version = "1.0.158", features = ["derive", "rc"] }
 serde-wasm-bindgen = "0.5.0"
 strum = "0.24.1"
 strum_macros = "0.24.1"
