--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -8,9 +8,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 async-std = "1.12.0"
+base64 = "0.21.0"
 console_error_panic_hook = "0.1.7"
 idna = "0.3.0"
 js-sys = "0.3.61"
+once_cell = "1.17.1"
 serde = { version = "1.0.158", features = ["derive", "rc"] }
 serde-wasm-bindgen = "0.5.0"
 strum = "0.24.1"
