--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -9,7 +9,9 @@ crate-type = ["cdylib"]
 [dependencies]
 async-std = "1.12.0"
 base64 = "0.21.0"
+chrono = { version = "0.4.24", features = ["serde"] }
 console_error_panic_hook = "0.1.7"
+derivative = "2.2.0"
 idna = "0.3.0"
 js-sys = "0.3.61"
 once_cell = "1.17.1"
