Generalized suffix matching and added storage

--- a/cubicle/res/manifest.json
+++ b/cubicle/res/manifest.json
@@ -6,7 +6,8 @@
 	"manifest_version": 2,
 	"permissions": [
 		"contextualIdentities",
-		"cookies"
+		"cookies",
+		"storage"
 	],
 	"browser_action": {
 		"default_popup": "popup.html"
