Added tab properties and ID

--- a/cubicle/res/manifest.json
+++ b/cubicle/res/manifest.json
@@ -5,6 +5,7 @@
 	"author": "WylieYYYY",
 	"manifest_version": 2,
 	"permissions": [
+		"<all_urls>",
 		"contextualIdentities",
 		"cookies",
 		"storage"
