Added tab assignment and preferences

--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -34,6 +34,7 @@ features = [
   "ReadableStreamDefaultReader",
   "ReadableStreamGetReaderOptions",
   "ReadableStreamReaderMode",
+  "Url",
 ]
 
 [build-dependencies]
