Added temporary container creation and tab update listener cleanup

--- a/cubicle/res/manifest.json
+++ b/cubicle/res/manifest.json
@@ -15,7 +15,7 @@
 	},
 	"background": {
 		"page": "background.html",
-		"persistent": false
+		"persistent": true
 	},
 	"options_ui": {
 		"page": "options.html"
