--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,9 @@ stages:
 lint:
   stage: lint
   script:
+    - npm install eslint eslint-config-google
     - cargo fmt --check
+    - node node_modules/eslint/bin/eslint.js 'cubicle/res/*.js' 'cubicle/res/components/*.js'
 
 build:
   stage: build
