--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -39,3 +39,7 @@ features = [
 [build-dependencies]
 fs_extra = "1.3.0"
 tera = { version = "1.18.1", default-features = false }
+
+[dev-dependencies]
+async-std = { version = "1.12.0", features = ["attributes"] }
+indoc = "2.0.3"
