--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -14,6 +14,7 @@ console_error_panic_hook = "0.1.7"
 derivative = "2.2.0"
 idna = "0.3.0"
 js-sys = "0.3.61"
+mockall_double = "0.3.0"
 once_cell = "1.17.1"
 serde = { version = "1.0.158", features = ["derive", "rc"] }
 serde-wasm-bindgen = "0.5.0"
@@ -43,3 +44,4 @@ tera = { version = "1.18.1", default-features = false }
 [dev-dependencies]
 async-std = { version = "1.12.0", features = ["attributes"] }
 indoc = "2.0.3"
+mockall = "0.11.4"
