--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -13,7 +13,7 @@ chrono = { version = "0.4.24", features = ["serde"] }
 console_error_panic_hook = "0.1.7"
 derivative = "2.2.0"
 idna = "0.3.0"
-js-sys = "0.3.61"
+js-sys = "0.3.65"
 mockall_double = "0.3.0"
 once_cell = "1.17.1"
 serde = { version = "1.0.158", features = ["derive", "rc"] }
@@ -22,11 +22,11 @@ strum = "0.24.1"
 strum_macros = "0.24.1"
 tera = { version = "1.18.1", default-features = false }
 thiserror = "1.0.40"
-wasm-bindgen = "=0.2.87"
+wasm-bindgen = "=0.2.89"
 wasm-bindgen-futures = "0.4.34"
 
 [dependencies.web-sys]
-version = "0.3.61"
+version = "0.3.65"
 features = [
   "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window",
   "ReadableStream",
@@ -45,3 +45,4 @@ tera = { version = "1.18.1", default-features = false }
 async-std = { version = "1.12.0", features = ["attributes"] }
 indoc = "2.0.3"
 mockall = "0.11.4"
+wasm-bindgen-test = "=0.3.39"
