--- a/cubicle/Cargo.toml
+++ b/cubicle/Cargo.toml
@@ -45,4 +45,5 @@ tera = { version = "1.18.1", default-features = false }
 async-std = { version = "1.12.0", features = ["attributes"] }
 indoc = "2.0.3"
 mockall = "0.11.4"
+serde_assert = "0.6.0"
 wasm-bindgen-test = "=0.3.39"
