--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,8 @@ test:
 build:
   stage: build
   script:
-    - cargo build --target wasm32-unknown-unknown --verbose
-    - wasm-bindgen --target web /packages/cargo/target/wasm32-unknown-unknown/debug/*.wasm --out-dir build/
+    - cargo build --release --target wasm32-unknown-unknown --verbose
+    - wasm-bindgen --target web /packages/cargo/target/wasm32-unknown-unknown/release/*.wasm --out-dir build/
     - cd build/ && zip -r -FS ../cubicle.xpi -- *
   artifacts:
     paths:
